[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["XDeviation <191602098@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pypinyin = "^0.47.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
